refactor: filter 서비스 코드 줄이기